Labels contrast fix
.

--- a/Alcohol/styles.css
+++ b/Alcohol/styles.css
@@ -38,3 +38,11 @@ body {
 .alert {
     margin-bottom: 0px !important;
 }
+
+.form-label {
+    background-color: rgb(244, 242, 238, 0.5);
+    border-radius: 10px;
+    height: 100%;
+    padding: 5px 5px 5px 5px;
+    margin-top: 0.5rem;
+}
